--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Prototype</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <p class="card-text">The design process started with designing the header and footer. From there I continued by building the body of the page. Below is the first prototype created. You can also see the UI style tile created. This was based off the current website, but with some modernization </p>
               <p class="card-text">Lofi Wireframes</p>
               <img src="./Images/lofi_frames.jpg" height="250">
               <p class="card-text">UI Style Tile</p>
@@ -115,7 +115,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Testing</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <p class="card-text">Tests were done on the lofi wireframe prototypes. Once I reviewed users feed back I then went in edited and added high fidelity components.</p>
               <p class="card-text">High Fidelity Version 1</p>
               <img src="./Images/highfidelity_1.jpg" height="250">
               <br></br>
